<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#6d9773"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6d9773"
        android:orientation="vertical"
        android:id="@+id/mll"
        tools:context="com.example.hellen.wiiapp.RegisterActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="170dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/wifilogo" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#FFFFFF"
            android:padding="15dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Create"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/etUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/mail"
                android:drawablePadding="12dp"
                android:hint="@string/enteryouremail"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="start"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp" />
            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/name"
                android:drawablePadding="12dp"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:gravity="start"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                tools:visibility="visible" />


            <EditText
                android:id="@+id/etUserPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:hint="@string/enter_password"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:gravity="start"/>
            <EditText
                android:id="@+id/etConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/lock"
                android:hint="@string/confirm_password"
                android:drawablePadding="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="16sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:gravity="start">
            </EditText>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textAlignment="gravity"
                android:textSize="16sp"
                android:padding="15dp"
                app:cornerRadius="40dp"
                android:background="#FFC107"
                android:textColor="@color/white"
                android:text="@string/sign_up"
                android:onClick="RegisterUser"/>
        </LinearLayout>
        <TextView
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:text="@string/haveaccountlog"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:onClick="MovetoLogin"/>
    </LinearLayout>
</ScrollView>