<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="#a3c585"
    tools:context="com.example.hellen.wiiapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="80dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/wifilogo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/e_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@drawable/shape"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="10"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:hint="@string/pass"
            android:background="@drawable/shape"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:layout_marginTop="20dp"
            android:background="#FFC107"
            android:text="Login"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:onClick="Login"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="@string/signup"
            android:onClick="MovetoSignup"/>
    </LinearLayout>


</LinearLayout>